--- a/news/templates/news/index.html
+++ b/news/templates/news/index.html
@@ -5,42 +5,108 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
     <!-- Bootstrap CSS -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
 </head>
-<body>
-    <div class="container text-center">
+
+<body class="bg-dark">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary bg-primary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Brunoyam news</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 top-menu">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Home</a>
+            </li>
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+            </form>
+          </ul>
+
+          <ul class="navbar-nav ms-auto me-2 mb-lg-0">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-current="page" href="#"><i class="fa-regular fa-user"></i></a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="#">Авторизация</a></li>
+                    <li><a class="dropdown-item" href="#">Регистрация</a></li>
+                </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="container">
         <header>
-            <div class="logo display-1">Brunoyam News</div>
+            <div class="logo display-3 text-center">Brunoyam News</div>
         </header>
         <main>
             <div class="main-news">
                 <div class="card">
-                    <div class="main-news__title">Название главной новости</div>
-                    <div class="main-news__description">Вступление главной новости</div>
+                    <div class="card-body">
+                        <h1>
+                            <img src="https://icdn.lenta.ru/images/2024/12/09/17/20241209174125615/detail_c2016e9a522cef608070fe4f8a8c408b.jpg" width="500px" align="left">
+                            <big> Началась вторая космическая эра </big><br>
+                            Покорение Луны, станция на Венере и прорыв США:
+                                как изменится космонавтика всего за один год?
+                        </h1>
+                    </div>
                 </div>
             </div>
             <div class="news-list">
                 <div class="row">
                     <div class="col-4">
                         <div class="card">
-                            <div class="news-list__item__title">Название новости</div>
-                            <div class="news-list__item__description">Вступление новости</div>
+                            <img src="https://icdn.lenta.ru/images/2024/11/28/15/20241128152737048/detail_ab59c2839bdc913ebaa2b181883cd7a4.jpg" width="400" height="400">
+                            <div class="news-list__item__title"><h2>«Мой бизнес причиняет людям боль»</h2></div>
+                            <div class="news-list__item__description">Как выходец из криминального Гарлема стал величайшим боксером XX века, но умер в нищете.</div>
                         </div>
                     </div>
                     <div class="col-4">
                         <div class="card">
-                            <div class="news-list__item__title">Название новости</div>
-                            <div class="news-list__item__description">Вступление новости</div>
+                            <img src="https://icdn.lenta.ru/images/2024/12/26/13/20241226135556892/detail_1d1e2a9fb9bba67dd8a79d87a8b39289.jpg" width="400" height="400">
+                            <div class="news-list__item__title"><h2>«Хочу быть популярным, как Хабиб»</h2></div>
+                            <div class="news-list__item__description">Как деревенский парень прошел путь от надзирателя в колонии до лучшего кулачника России</div>
                         </div>
                     </div>
                     <div class="col-4">
                         <div class="card">
-                            <div class="news-list__item__title">Название новости</div>
-                            <div class="news-list__item__description">Вступление новости</div>
+                            <img src="https://icdn.lenta.ru/images/2025/01/17/12/20250117124637676/detail_3b9101d7653e9a96ca06160267f93b63.jpg" width="400" height="400">
+                            <div class="news-list__item__title"><h2>В кино — один из самых громких фильмов года «Носферату».</h2></div>
+                            <div class="news-list__item__description">Чем удивляет новый блокбастер о легендарном вампире?</div>
                         </div>
                     </div>
                 </div>
             </div>
         </main>
     </div>
+    <div class="b-example-divider"></div>
+    <div class="footer">
+        <footer class="py-3 my-4">
+            <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+                <li class="nav-item">
+                    <a href="#" class="nav-link px-2 text-body-secondary">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link px-2 text-body-secondary">Features</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link px-2 text-body-secondary">Contacts</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link px-2 text-body-secondary">FAQs</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link px-2 text-body-secondary">About</a>
+                </li>
+            </ul>
+            <p class="text-center text-body-secondary">© 2025 Company, Inc</p>
+        </footer>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
