--- a/news/templates/news/index.html
+++ b/news/templates/news/index.html
@@ -81,6 +81,12 @@
                             <div class="news-list__item__description">Чем удивляет новый блокбастер о легендарном вампире?</div>
                         </div>
                     </div>
+                    <div class="col-4">
+                        <div class="card">
+                            <div class="news-list__item__title"><h2>{{ main_news.title }}</h2></div>
+                            <div class="news-list__item__description">{{ main_news.description }}</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </main>
