--- a/news/templates/news/index.html
+++ b/news/templates/news/index.html
@@ -81,12 +81,11 @@
                             <div class="news-list__item__description">Чем удивляет новый блокбастер о легендарном вампире?</div>
                         </div>
                     </div>
-                    <div class="col-4">
-                        <div class="card">
-                            <div class="news-list__item__title"><h2>{{ main_news.title }}</h2></div>
-                            <div class="news-list__item__description">{{ main_news.description }}</div>
+                    {% for news in news_list %}
+                        <div class="col-4 p-3">
+                            {% include "news/news_card.html" with title=news.title description=news.description %}
                         </div>
-                    </div>
+                    {% endfor %}
                 </div>
             </div>
         </main>
